@@ -60,7 +60,6 @@ lib/TAP/Parser/SourceHandler/File.pm
 lib/TAP/Parser/SourceHandler/Handle.pm
 lib/TAP/Parser/SourceHandler/Perl.pm
 lib/TAP/Parser/SourceHandler/RawTAP.pm
-lib/TAP/Parser/Utils.pm
 lib/TAP/Parser/YAMLish/Reader.pm
 lib/TAP/Parser/YAMLish/Writer.pm
 lib/Test/Harness.pm
