@@ -13,7 +13,7 @@ use File::Spec;
 use App::Prove;
 use Getopt::Long;
 
-use TAP::Parser::Utils qw( split_shell );
+use Text::ParseWords qw(shellwords);
 
 package FakeProve;
 
@@ -1627,7 +1627,7 @@ for my $test (@SCHEDULE) {
 
                 # adapt our expectations if HARNESS_PERL_SWITCHES is set
                 push @{ $runlog->[0][1]{switches} },
-                  split_shell( $ENV{HARNESS_PERL_SWITCHES} )
+                  shellwords( $ENV{HARNESS_PERL_SWITCHES} )
                   if $ENV{HARNESS_PERL_SWITCHES};
 
                 unless (
