@@ -7,6 +7,7 @@ Revision history for Test-Harness
           tests (Karen Etheridge)
         - Fix failing test on VMS (Craig Berry)
         - Improve error message on loading failure (Leon Timmermans, #77730)
+        - Use Text::ParseWords, deprecate TAP::Parser::Utils
 
 3.28    2013-05-02
         - Bugfix: Fix taint failures on Windows (Jan Dubois)
